// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixedSizeList changing itemSize updates the rendered items 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 3,
      "visibleStartIndex": 0,
      "visibleStopIndex": 1,
    },
  ],
]
`;

exports[`FixedSizeList onScroll scrolling should report partial items correctly in onItemsRendered 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 6,
      "visibleStartIndex": 0,
      "visibleStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 1,
      "overscanStopIndex": 8,
      "visibleStartIndex": 2,
      "visibleStopIndex": 6,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 2,
      "overscanStopIndex": 8,
      "visibleStartIndex": 3,
      "visibleStopIndex": 6,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 7,
      "visibleStartIndex": 2,
      "visibleStopIndex": 6,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 94,
      "overscanStopIndex": 99,
      "visibleStartIndex": 95,
      "visibleStopIndex": 99,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 95,
      "overscanStopIndex": 99,
      "visibleStartIndex": 96,
      "visibleStopIndex": 99,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 93,
      "overscanStopIndex": 99,
      "visibleStartIndex": 95,
      "visibleStopIndex": 99,
    },
  ],
]
`;

exports[`FixedSizeList onScroll should call onScroll after mount 1`] = `
Array [
  Array [
    Object {
      "scrollDirection": "forward",
      "scrollOffset": 0,
      "scrollUpdateWasRequested": false,
    },
  ],
]
`;

exports[`FixedSizeList onScroll should call onScroll when scroll position changes 1`] = `
Array [
  Array [
    Object {
      "scrollDirection": "forward",
      "scrollOffset": 0,
      "scrollUpdateWasRequested": false,
    },
  ],
  Array [
    Object {
      "scrollDirection": "forward",
      "scrollOffset": 100,
      "scrollUpdateWasRequested": true,
    },
  ],
  Array [
    Object {
      "scrollDirection": "backward",
      "scrollOffset": 0,
      "scrollUpdateWasRequested": true,
    },
  ],
]
`;

exports[`FixedSizeList overscanCount should accommodate a custom overscan 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 1,
      "overscanStopIndex": 10,
      "visibleStartIndex": 4,
      "visibleStopIndex": 7,
    },
  ],
]
`;

exports[`FixedSizeList overscanCount should not scan past the beginning of the list 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
]
`;

exports[`FixedSizeList overscanCount should not scan past the end of the list 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 4,
      "overscanStopIndex": 9,
      "visibleStartIndex": 6,
      "visibleStopIndex": 9,
    },
  ],
]
`;

exports[`FixedSizeList overscanCount should overscan in both directions when not scrolling 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 7,
      "visibleStartIndex": 2,
      "visibleStopIndex": 5,
    },
  ],
]
`;

exports[`FixedSizeList overscanCount should overscan in the direction being scrolled 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 7,
      "visibleStartIndex": 2,
      "visibleStopIndex": 5,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 3,
      "overscanStopIndex": 9,
      "visibleStartIndex": 4,
      "visibleStopIndex": 7,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 6,
      "visibleStartIndex": 2,
      "visibleStopIndex": 5,
    },
  ],
]
`;

exports[`FixedSizeList overscanCount should require a minimum of 1 overscan to support tabbing 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 1,
      "overscanStopIndex": 6,
      "visibleStartIndex": 2,
      "visibleStopIndex": 5,
    },
  ],
]
`;

exports[`FixedSizeList scrollToItem method scroll with align = "auto" should work with partially-visible items 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 5,
      "overscanStopIndex": 12,
      "visibleStartIndex": 7,
      "visibleStopIndex": 10,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 94,
      "overscanStopIndex": 99,
      "visibleStartIndex": 96,
      "visibleStopIndex": 99,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 6,
      "visibleStartIndex": 1,
      "visibleStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
]
`;

exports[`FixedSizeList scrollToItem method scroll with align = "auto" should work with very small lists and partial items 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 1,
      "visibleStartIndex": 0,
      "visibleStopIndex": 1,
    },
  ],
]
`;

exports[`FixedSizeList scrollToItem method should ignore indexes greater than itemCount 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 94,
      "overscanStopIndex": 99,
      "visibleStartIndex": 96,
      "visibleStopIndex": 99,
    },
  ],
]
`;

exports[`FixedSizeList scrollToItem method should ignore indexes less than zero 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
]
`;

exports[`FixedSizeList scrollToItem method should not set invalid offsets when the list contains few items 1`] = `[Function]`;

exports[`FixedSizeList scrollToItem method should scroll to the correct item for align = "auto" 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 5,
      "overscanStopIndex": 12,
      "visibleStartIndex": 7,
      "visibleStopIndex": 10,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 7,
      "visibleStartIndex": 2,
      "visibleStopIndex": 5,
    },
  ],
]
`;

exports[`FixedSizeList scrollToItem method should scroll to the correct item for align = "center" 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 6,
      "overscanStopIndex": 14,
      "visibleStartIndex": 8,
      "visibleStopIndex": 12,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 5,
      "overscanStopIndex": 13,
      "visibleStartIndex": 7,
      "visibleStopIndex": 11,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 94,
      "overscanStopIndex": 99,
      "visibleStartIndex": 96,
      "visibleStopIndex": 99,
    },
  ],
]
`;

exports[`FixedSizeList scrollToItem method should scroll to the correct item for align = "end" 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 5,
      "overscanStopIndex": 12,
      "visibleStartIndex": 7,
      "visibleStopIndex": 10,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 4,
      "overscanStopIndex": 11,
      "visibleStartIndex": 6,
      "visibleStopIndex": 9,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
]
`;

exports[`FixedSizeList scrollToItem method should scroll to the correct item for align = "smart" 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 6,
      "overscanStopIndex": 14,
      "visibleStartIndex": 8,
      "visibleStopIndex": 12,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 4,
      "overscanStopIndex": 11,
      "visibleStartIndex": 6,
      "visibleStopIndex": 9,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 94,
      "overscanStopIndex": 99,
      "visibleStartIndex": 96,
      "visibleStopIndex": 99,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 93,
      "overscanStopIndex": 99,
      "visibleStartIndex": 95,
      "visibleStopIndex": 98,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 94,
      "overscanStopIndex": 99,
      "visibleStartIndex": 96,
      "visibleStopIndex": 99,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 92,
      "overscanStopIndex": 99,
      "visibleStartIndex": 94,
      "visibleStopIndex": 97,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 94,
      "overscanStopIndex": 99,
      "visibleStartIndex": 96,
      "visibleStopIndex": 99,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 86,
      "overscanStopIndex": 94,
      "visibleStartIndex": 88,
      "visibleStopIndex": 92,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 94,
      "overscanStopIndex": 99,
      "visibleStartIndex": 96,
      "visibleStopIndex": 99,
    },
  ],
]
`;

exports[`FixedSizeList scrollToItem method should scroll to the correct item for align = "start" 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 8,
      "overscanStopIndex": 15,
      "visibleStartIndex": 10,
      "visibleStopIndex": 13,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 7,
      "overscanStopIndex": 14,
      "visibleStartIndex": 9,
      "visibleStopIndex": 12,
    },
  ],
  Array [
    Object {
      "overscanStartIndex": 94,
      "overscanStopIndex": 99,
      "visibleStartIndex": 96,
      "visibleStopIndex": 99,
    },
  ],
]
`;

exports[`FixedSizeList should render a list of columns 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 3,
      "visibleStartIndex": 0,
      "visibleStopIndex": 1,
    },
  ],
]
`;

exports[`FixedSizeList should render a list of rows 1`] = `
Array [
  Array [
    Object {
      "overscanStartIndex": 0,
      "overscanStopIndex": 5,
      "visibleStartIndex": 0,
      "visibleStopIndex": 3,
    },
  ],
]
`;
